--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-title">¿Listo para Transformar tu Vida?</h2>
-                <p class="section-subtitle">Agenda tu consulta gratuita y comienza tu camino hacia una nutrición óptima</p>
+                <p class="section-subtitle">Agenda tu consulta y comenza tu camino hacia una nutrición óptima</p>
                 
                 <div class="contact-cta">
                     <div class="cta-content">
