--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                             </div>
                         </div>
                         
-                        <a href="https://wa.me/5493812345678?text=Hola%20Antonela!%20Me%20interesa%20conocer%20más%20sobre%20tus%20servicios%20de%20nutrición%20deportiva%20y%20agendar%20una%20consulta%20gratuita." 
+                        <a href="https://wa.me/5493812345678?text=Hola%20Antonela!%20Me%20interesa%20conocer%20más%20sobre%20tus%20servicios%20de%20nutrición%20deportiva%20y%20agendar%20una%20consulta" 
                            class="btn btn-success btn-lg whatsapp-btn" 
                            target="_blank" 
                            rel="noopener noreferrer">
